--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,11 @@
 CHANGES for vcp - Version CoPy
 
+0.02 Thu Apr 12 10:16:01 CDT 2007
+   - Created $MATCH0, $MATCH1, ... environment variables for shell
+     commands to use.
+   - Added processing to allow shell commands to use $1, $2, ... to
+     access the matches.
+
 0.01 Sat Dec  2 23:10:43 EST 2000
    - First public release.  Moderately functional alpha code.  Supports
    p4, cvs, RevML.  Expect APIs, UIs and enerthing else to change before
