--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,11 @@
 CHANGES for vcp - Version CoPy
 
+0.07 Thu Sep 20 11:19:43 CDT 2007
+   - Reverted to the 0.05 behavior that a target does *not* get
+     rebuilt if it has exactly the same time as a dependency.  Forcing
+     a rebuild can cause problems when execution of the rule is not
+     idempotent.
+
 0.06 Wed Sep 12 15:00:57 CDT 2007
    - Fixed check for recursive dependencies
    - Default to rebuilding a target if it has exactly the same time as
